fixed css overlap

--- a/client/src/components/Admin/Admin.css
+++ b/client/src/components/Admin/Admin.css
@@ -4,7 +4,7 @@
     align-self: self-start;
 }
 
-.wrapper {
+.admin-wrapper {
     display: flex;
     flex-direction: column;
     gap: 15px;
