--- a/client/src/components/Courses/Courses.css
+++ b/client/src/components/Courses/Courses.css
@@ -1,4 +1,4 @@
-.wrapper {
+.c-wrapper {
     width: 100%;
     height: 100%;
     display: flex;
